--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.453.0",
     "radix-ui": "^1.0.1",
